examples/nginx-test/nginx-test-traffic-simulator-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-traffic-simulator
  namespace: default
  labels:
    app: nginx-test-traffic-simulator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-test-traffic-simulator
  template:
    metadata:
      labels:
        app: nginx-test-traffic-simulator
    spec:
      containers:
      - name: k6
        image: grafana/k6:0.48.0
        command: ["k6"]
        args: ["run", "--quiet", "/scripts/traffic-simulator.js"]
        resources:
          requests:
            cpu: 1000m
            memory: 2Gi
          limits:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: script
          mountPath: /scripts
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
            - ALL
      volumes:
      - name: script
        configMap:
          name: nginx-test-traffic-simulator
          defaultMode: 0755
      restartPolicy: Always
